samples/_failures_safe/1761317676_8b0cb4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b9b32d4.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_0b9b32d4.c:154:13: error: expected expression at end of input
  154 |             analyzer->words[max_index] =
      |             ^~~~~~~~
./samples/SAFE/__tmp_0b9b32d4.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0b9b32d4.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0b9b32d4.c:154:13: error: expected declaration or statement at end of input
